# halo2-ccs-plus

./: Cargo.toml  README.md  plonk-to-ccs-plus.ipynb  rust-toolchain.toml
.github/workflows/: docs.yml
src/: ccs.rs  cell_mapping.rs  lib.rs  lookup.rs  main.rs  monomial.rs  plonkish_table.rs  query.rs
tests/: fibonacci.rs  lessthan.rs  poseidon.rs  range.rs  unassigned_lookup_table.rs
