[package]
name = "halo2ccs"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/pnyda/halo2.git", rev = "bdc6f1cb47ff96bf0696fd585bebd6e7700c5736" }
folding-schemes = { git = "https://github.com/privacy-scaling-explorations/sonobe.git" }
ark-ff = { version = "0.5.0", default-features = false, features = ["parallel", "asm"] }
ark-std = { version = "0.5.0" }
ff = "0.13"
ark-pallas = { version = "0.5.0" }
halo2_gadgets = { git = "https://github.com/pnyda/halo2.git", rev = "bdc6f1cb47ff96bf0696fd585bebd6e7700c5736" }